# NFT-shop-qml

./: .gitignore  CMakeLists.txt  links.json  main.cpp  res.qrc
models/: CMakeLists.txt  UserModel.cpp  UserModel.h
utils/: CMakeLists.txt  NetworkManager.cpp  NetworkManager.h  Utils.cpp  Utils.h
view/: CMakeLists.txt  ExplorePage.qml  MainPage.qml  NavigationMenu.qml  NftSwiper.qml  NftSwiper2.qml  NftSwiper2Element.qml  NotificationsPage.qml  PearlsPage.qml  SearchPage.qml  UserProfilePage.qml  main.qml
view/ApplicationWindow/: ApplicationWindowController.cpp  ApplicationWindowController.h
view/LoginWindow/: LoginWindow.qml  LoginWindowController.cpp  LoginWindowController.h
view/NavigationMenu/: NavMenuElementDelegate.qml  NavigationMenu.qml
